demos/c_cpp_includes/dtwainx.h

LONG           DLLENTRY_DEF      DTWAIN_SetLastError(LONG nError);
DTWAIN_BOOL    DLLENTRY_DEF      DTWAIN_SetCountry(LONG nCountry);
DTWAIN_BOOL    DLLENTRY_DEF      DTWAIN_SetLanguage(LONG nLanguage);
/* Callback procedure for alternate DTWAIN message notification */
DTWAIN_CALLBACK_PROC DLLENTRY_DEF DTWAIN_SetCallback(DTWAIN_CALLBACK_PROC Fn,LONG UserData);
/* 64-bit LONG type callbacks */
DTWAIN_CALLBACK_PROC64 DLLENTRY_DEF DTWAIN_SetCallback64(DTWAIN_CALLBACK_PROC64 Fn,DTWAIN_LONG64 UserData);
DTWAIN_SOURCE  DLLENTRY_DEF      DTWAIN_SelectSource(VOID_PROTOTYPE);
DTWAIN_BOOL    DLLENTRY_DEF      DTWAIN_SetDefaultSource( DTWAIN_SOURCE Source);
DTWAIN_SOURCE  DLLENTRY_DEF      DTWAIN_SelectSourceWithOpen(DTWAIN_BOOL bOpen);
/*  Capability functions.  Source must be opened before using them!!! */
DTWAIN_BOOL    DLLENTRY_DEF      DTWAIN_SetCapValues(DTWAIN_SOURCE Source,LONG lCap,LONG lSetType,DTWAIN_ARRAY pArray);
DTWAIN_BOOL    DLLENTRY_DEF      DTWAIN_SetCapValuesEx(DTWAIN_SOURCE Source,LONG lCap,LONG lSetType,LONG lContainerType,DTWAIN_ARRAY pArray);
DTWAIN_BOOL    DLLENTRY_DEF      DTWAIN_SetCapValuesEx2(DTWAIN_SOURCE Source,LONG lCap,LONG lSetType,LONG lContainerType,LONG nDataType,DTWAIN_ARRAY pArray );
DTWAIN_BOOL    DLLENTRY_DEF      DTWAIN_SetAllCapsToDefault(DTWAIN_SOURCE Source);
DTWAIN_BOOL    DLLENTRY_DEF      DTWAIN_SetAcquireArea(DTWAIN_SOURCE Source,LONG lSetType,DTWAIN_ARRAY FloatEnum,DTWAIN_ARRAY ActualEnum);
/* Set whether a buffered transfer will use tile mode */
DTWAIN_BOOL    DLLENTRY_DEF      DTWAIN_SetBufferedTileMode(DTWAIN_SOURCE Source, DTWAIN_BOOL bTileMode);
DTWAIN_BOOL    DLLENTRY_DEF      DTWAIN_SetMaxAcquisitions( DTWAIN_SOURCE Source, LONG MaxAcquires);
/* The DTWAIN_SetFileXferFormat function does not need to be called, since DTWAIN does
 * this internally when a file transfer is done */
DTWAIN_BOOL    DLLENTRY_DEF      DTWAIN_SetFileXferFormat(DTWAIN_SOURCE Source, LONG lFileType, DTWAIN_BOOL bSetCurrent);
/* Some Source setting functions. Convenient "quick and dirty" setting of most used
   values */
DTWAIN_BOOL          DLLENTRY_DEF    DTWAIN_SetContrast( DTWAIN_SOURCE Source,DTWAIN_FLOAT Contrast);
DTWAIN_BOOL          DLLENTRY_DEF    DTWAIN_SetBrightness( DTWAIN_SOURCE Source,DTWAIN_FLOAT Brightness);
DTWAIN_BOOL          DLLENTRY_DEF    DTWAIN_SetResolution( DTWAIN_SOURCE Source,DTWAIN_FLOAT Resolution);
/* Scale acquired images (Can be used for thumbnailing acquired images) */
DTWAIN_BOOL          DLLENTRY_DEF    DTWAIN_SetAcquireImageScale( DTWAIN_SOURCE Source, DTWAIN_FLOAT xscale,DTWAIN_FLOAT yscale);
/* Setting special events from Source */
DTWAIN_BOOL DLLENTRY_DEF DTWAIN_SetDeviceNotifications(DTWAIN_SOURCE Source, LONG DevEvents);
DTWAIN_BOOL DLLENTRY_DEF DTWAIN_SetCompressionType(DTWAIN_SOURCE Source, LONG lCompression, DTWAIN_BOOL bSetCurrent);
DTWAIN_BOOL DLLENTRY_DEF DTWAIN_SetFileCompressionType(DTWAIN_SOURCE Source, LONG lCompression, DTWAIN_BOOL bIsCustom);
DTWAIN_BOOL DLLENTRY_DEF DTWAIN_SetAvailablePrinters(DTWAIN_SOURCE Source, LONG lpAvailPrinters);
DTWAIN_BOOL DLLENTRY_DEF DTWAIN_SetAvailablePrintersArray(DTWAIN_SOURCE Source, DTWAIN_ARRAY AvailPrinters);
DTWAIN_BOOL DLLENTRY_DEF DTWAIN_SetPrinter(DTWAIN_SOURCE Source, LONG Printer, DTWAIN_BOOL bCurrent);
DTWAIN_BOOL DLLENTRY_DEF DTWAIN_SetPrinterEx(DTWAIN_SOURCE Source, LONG Printer, DTWAIN_BOOL bCurrent);
DTWAIN_BOOL DLLENTRY_DEF DTWAIN_SetPrinterStartNumber(DTWAIN_SOURCE Source,  LONG nStart);
DTWAIN_BOOL DLLENTRY_DEF DTWAIN_SetPrinterStringMode(DTWAIN_SOURCE Source, LONG PrinterMode, DTWAIN_BOOL bSetCurrent);
DTWAIN_BOOL DLLENTRY_DEF DTWAIN_SetPrinterStrings(DTWAIN_SOURCE Source, DTWAIN_ARRAY ArrayString, LPLONG pNumStrings);
DTWAIN_BOOL DLLENTRY_DEF DTWAIN_SetOrientation(DTWAIN_SOURCE Source, LONG Orient, DTWAIN_BOOL bSetCurrent);
DTWAIN_BOOL DLLENTRY_DEF DTWAIN_SetPaperSize(DTWAIN_SOURCE Source, LONG PaperSize, DTWAIN_BOOL bSetCurrent);
DTWAIN_BOOL DLLENTRY_DEF DTWAIN_SetPixelType(DTWAIN_SOURCE Source, LONG PixelType, LONG BitDepth, DTWAIN_BOOL bSetCurrent);
DTWAIN_BOOL DLLENTRY_DEF DTWAIN_SetBitDepth(DTWAIN_SOURCE Source, LONG BitDepth,  DTWAIN_BOOL bSetCurrent);
DTWAIN_BOOL DLLENTRY_DEF DTWAIN_SetCustomDSData(DTWAIN_SOURCE Source, HANDLE hData, LPCBYTE Data, DWORD dSize, LONG nFlags);
/* Set JPEG Quality for JPEG file transfers */
DTWAIN_BOOL DLLENTRY_DEF DTWAIN_SetJpegValues(DTWAIN_SOURCE Source, LONG Quality, LONG Progressive);
/* Set PDF Options for PDF file transfers */
DTWAIN_BOOL DLLENTRY_DEF DTWAIN_SetPDFOrientation(DTWAIN_SOURCE Source, LONG lPOrientation);
DTWAIN_BOOL DLLENTRY_DEF DTWAIN_SetPDFPageSize(DTWAIN_SOURCE Source, LONG PageSize,DTWAIN_FLOAT CustomWidth,DTWAIN_FLOAT CustomHeight);
DTWAIN_BOOL DLLENTRY_DEF DTWAIN_SetPDFPageScale(DTWAIN_SOURCE Source, LONG nOptions, DTWAIN_FLOAT xScale,DTWAIN_FLOAT yScale);
DTWAIN_BOOL DLLENTRY_DEF DTWAIN_SetPDFCompression(DTWAIN_SOURCE Source, DTWAIN_BOOL bCompression);
DTWAIN_BOOL DLLENTRY_DEF DTWAIN_SetPDFASCIICompression(DTWAIN_SOURCE Source, DTWAIN_BOOL bSet);
DTWAIN_BOOL DLLENTRY_DEF DTWAIN_SetPDFAESEncryption(DTWAIN_SOURCE Source, LONG nWhichEncryption, DTWAIN_BOOL bUseAES);
DTWAIN_BOOL DLLENTRY_DEF DTWAIN_SetPostScriptType(DTWAIN_SOURCE Source, LONG PSType);
DTWAIN_BOOL DLLENTRY_DEF DTWAIN_SetPDFJpegQuality(DTWAIN_SOURCE Source, LONG Quality);
/* Setting the text element */
DTWAIN_BOOL DLLENTRY_DEF DTWAIN_SetPDFTextElementFloat(DTWAIN_PDFTEXTELEMENT TextElement, DTWAIN_FLOAT val1, DTWAIN_FLOAT val2, LONG Flags);
DTWAIN_BOOL DLLENTRY_DEF DTWAIN_SetPDFTextElementLong(DTWAIN_PDFTEXTELEMENT TextElement, LONG val1, LONG val2, LONG Flags);
/* Job Control for high-speed scanners */
DTWAIN_BOOL DLLENTRY_DEF DTWAIN_SetJobControl(DTWAIN_SOURCE Source, LONG JobControl, DTWAIN_BOOL bSetCurrent);
DTWAIN_BOOL DLLENTRY_DEF DTWAIN_SetLightPath(DTWAIN_SOURCE Source, LONG LightPath);
DTWAIN_BOOL DLLENTRY_DEF DTWAIN_SetLightPathEx(DTWAIN_SOURCE Source, DTWAIN_ARRAY LightPaths);
DTWAIN_BOOL DLLENTRY_DEF DTWAIN_SetLightSources(DTWAIN_SOURCE Source, DTWAIN_ARRAY LightSources);
DTWAIN_BOOL DLLENTRY_DEF DTWAIN_SetLightSource(DTWAIN_SOURCE Source, LONG LightSource);
/* Page failure action (sets what to do if a page fails to be acquired successfully) */
/* These functions are not guaranteed to work if the Data Source does not behave correctly
   when handling page failures.  Caveat Emptor! */
DTWAIN_BOOL DLLENTRY_DEF DTWAIN_SetMaxRetryAttempts(DTWAIN_SOURCE Source, LONG nAttempts);
DTWAIN_BOOL DLLENTRY_DEF DTWAIN_SetCurrentRetryCount(DTWAIN_SOURCE Source, LONG nCount);
/* Allows area of image (DIB) to be returned to application when acquiring.  Use this if DTWAIN_SetAcquireArea
   does not work correctly.  Left, top, right, bottom are in the UNIT units */
DTWAIN_BOOL DLLENTRY_DEF DTWAIN_SetAcquireArea2(DTWAIN_SOURCE Source, DTWAIN_FLOAT left, DTWAIN_FLOAT top,DTWAIN_FLOAT right, DTWAIN_FLOAT bottom, LONG lUnit, LONG Flags);
DTWAIN_BOOL DLLENTRY_DEF DTWAIN_SetAcquireStripBuffer(DTWAIN_SOURCE Source, HANDLE hMem);
DTWAIN_BOOL DLLENTRY_DEF DTWAIN_SetAcquireStripSize(DTWAIN_SOURCE Source, DWORD StripSize);
/* Function to control auto-generation of image files produced by DTWAIN */
/* The Increment can be positive or negative */
DTWAIN_BOOL DLLENTRY_DEF DTWAIN_SetFileAutoIncrement( DTWAIN_SOURCE Source, LONG Increment, DTWAIN_BOOL bResetOnAcquire,DTWAIN_BOOL bSet );
/* Manual duplex mode functions */
DTWAIN_BOOL DLLENTRY_DEF DTWAIN_SetManualDuplexMode( DTWAIN_SOURCE Source, LONG Flags, DTWAIN_BOOL bSet );
/* Multi page mode */
DTWAIN_BOOL DLLENTRY_DEF DTWAIN_SetMultipageScanMode( DTWAIN_SOURCE Source, LONG ScanType);
/* Blank page detection functions */
DTWAIN_BOOL DLLENTRY_DEF DTWAIN_SetBlankPageDetection(DTWAIN_SOURCE Source, DTWAIN_FLOAT threshold, LONG discard_option, DTWAIN_BOOL bSet);
DTWAIN_BOOL DLLENTRY_DEF DTWAIN_SetBlankPageDetectionEx(DTWAIN_SOURCE Source, DTWAIN_FLOAT threshold,LONG autodetect, LONG detectOpts, DTWAIN_BOOL bSet);
DTWAIN_BOOL DLLENTRY_DEF DTWAIN_SetAlarms(DTWAIN_SOURCE Source, DTWAIN_ARRAY Alarms);
DTWAIN_BOOL DLLENTRY_DEF DTWAIN_SetAlarmVolume(DTWAIN_SOURCE Source, LONG Volume);
DTWAIN_BOOL  DLLENTRY_DEF DTWAIN_SetDoubleFeedDetectValues(DTWAIN_SOURCE Source, DTWAIN_ARRAY prray);
DTWAIN_BOOL DLLENTRY_DEF DTWAIN_SetDoubleFeedDetectLength(DTWAIN_SOURCE Source, DTWAIN_FLOAT Value);
DTWAIN_BOOL DLLENTRY_DEF DTWAIN_SetFeederAlignment( DTWAIN_SOURCE Source, LONG lpAlignment );
DTWAIN_BOOL DLLENTRY_DEF DTWAIN_SetFeederOrder( DTWAIN_SOURCE Source, LONG lOrder );
/* CAP_MAXBATCHBUFFERS */
DTWAIN_BOOL DLLENTRY_DEF DTWAIN_SetMaxBuffers( DTWAIN_SOURCE Source, LONG MaxBuf );
DTWAIN_BOOL DLLENTRY_DEF DTWAIN_SetOverscan(DTWAIN_SOURCE Source, LONG Value, DTWAIN_BOOL bSetCurrent);
/* ICAP_HIGHLIGHT */
DTWAIN_BOOL          DLLENTRY_DEF    DTWAIN_SetHighlight( DTWAIN_SOURCE Source, DTWAIN_FLOAT Highlight);
DTWAIN_BOOL DLLENTRY_DEF DTWAIN_SetNoiseFilter(DTWAIN_SOURCE Source, LONG NoiseFilter);
DTWAIN_BOOL DLLENTRY_DEF DTWAIN_SetPixelFlavor(DTWAIN_SOURCE Source, LONG PixelFlavor);
DTWAIN_BOOL DLLENTRY_DEF DTWAIN_SetRotation(DTWAIN_SOURCE Source, DTWAIN_FLOAT Rotation);
DTWAIN_BOOL DLLENTRY_DEF DTWAIN_SetPatchMaxRetries(DTWAIN_SOURCE Source, LONG nMaxRetries);
DTWAIN_BOOL DLLENTRY_DEF DTWAIN_SetPatchMaxPriorities(DTWAIN_SOURCE Source, LONG nMaxSearchRetries);
DTWAIN_BOOL DLLENTRY_DEF DTWAIN_SetPatchSearchMode(DTWAIN_SOURCE Source, LONG nSearchMode);
DTWAIN_BOOL DLLENTRY_DEF DTWAIN_SetPatchTimeOut(DTWAIN_SOURCE Source, LONG TimeOutValue);
DTWAIN_BOOL DLLENTRY_DEF DTWAIN_SetPatchPriorities(DTWAIN_SOURCE Source, DTWAIN_ARRAY SearchPriorities);
DTWAIN_BOOL DLLENTRY_DEF DTWAIN_SetEOJDetectValue(DTWAIN_SOURCE Source, LONG nValue);
DTWAIN_BOOL DLLENTRY_DEF DTWAIN_SetQueryCapSupport(DTWAIN_BOOL bSet);
DTWAIN_BOOL DLLENTRY_DEF DTWAIN_SetErrorBufferThreshold(LONG nErrors);
DTWAIN_BOOL DLLENTRY_DEF DTWAIN_SetOCRCapValues(DTWAIN_OCRENGINE Engine,LONG OCRCapValue,LONG SetType,DTWAIN_ARRAY CapValues);
LONG DLLENTRY_DEF DTWAIN_SetPDFOCRConversion(DTWAIN_OCRENGINE Engine,LONG PageType, LONG FileType,LONG PixelType, LONG BitDepth,LONG Options);
DTWAIN_BOOL DLLENTRY_DEF DTWAIN_SetPDFOCRMode(DTWAIN_SOURCE Source, DTWAIN_BOOL bSet);
/* Set callback for logging messages */
DTWAIN_BOOL DLLENTRY_DEF DTWAIN_SetLoggerCallback(DTWAIN_LOGGER_PROC logProc, DTWAIN_LONG64 UserData);
DTWAIN_BOOL DLLENTRY_DEF DTWAIN_SetLoggerCallbackA(DTWAIN_LOGGER_PROCA logProc, DTWAIN_LONG64 UserData);
DTWAIN_BOOL DLLENTRY_DEF DTWAIN_SetLoggerCallbackW(DTWAIN_LOGGER_PROCW logProc, DTWAIN_LONG64 UserData);
DTWAIN_BOOL DLLENTRY_DEF DTWAIN_SetErrorCallback(DTWAIN_ERROR_PROC proc, LONG UserData);
DTWAIN_BOOL DLLENTRY_DEF DTWAIN_SetErrorCallback64(DTWAIN_ERROR_PROC64 proc, DTWAIN_LONG64 UserData64);
/* TWAIN DSM search order functions */
DTWAIN_BOOL DLLENTRY_DEF DTWAIN_SetDSMSearchOrder(LONG SearchPath);
/* Optionally create a negative of the acquired image */
DTWAIN_BOOL DLLENTRY_DEF DTWAIN_SetAcquireImageNegative( DTWAIN_SOURCE Source, DTWAIN_BOOL IsNegative );
DTWAIN_BOOL DLLENTRY_DEF DTWAIN_SetPDFPolarity(DTWAIN_SOURCE Source, LONG Polarity);
/* Customize doubling the page count if acquiring in duplex mode */
DTWAIN_BOOL DLLENTRY_DEF DTWAIN_SetDoublePageCountOnDuplex(DTWAIN_SOURCE Source, DTWAIN_BOOL bDoubleCount);