demos/Python/dtwain.py

     theDLL.DTWAIN_SelectOCREngine2A.restype = ct.c_void_p
     theDLL.DTWAIN_SelectOCREngine2Ex.restype = ct.c_void_p
     theDLL.DTWAIN_SelectOCREngine2ExA.restype = ct.c_void_p
     theDLL.DTWAIN_SelectOCREngine2ExW.restype = ct.c_void_p
     theDLL.DTWAIN_SelectOCREngine2W.restype = ct.c_void_p
     theDLL.DTWAIN_SelectOCREngineByName.restype = ct.c_void_p
     theDLL.DTWAIN_SelectOCREngineByNameA.restype = ct.c_void_p
     theDLL.DTWAIN_SelectOCREngineByNameW.restype = ct.c_void_p
     theDLL.DTWAIN_SelectSource.restype = ct.c_void_p
     theDLL.DTWAIN_SelectSource2.restype = ct.c_void_p
     theDLL.DTWAIN_SelectSource2A.restype = ct.c_void_p
     theDLL.DTWAIN_SelectSource2Ex.restype = ct.c_void_p
     theDLL.DTWAIN_SelectSource2ExA.restype = ct.c_void_p
     theDLL.DTWAIN_SelectSource2ExW.restype = ct.c_void_p
     theDLL.DTWAIN_SelectSource2W.restype = ct.c_void_p
     theDLL.DTWAIN_SelectSourceByName.restype = ct.c_void_p
     theDLL.DTWAIN_SelectSourceByNameA.restype = ct.c_void_p
     theDLL.DTWAIN_SelectSourceByNameW.restype = ct.c_void_p
     theDLL.DTWAIN_SelectSourceByNameWithOpen.restype = ct.c_void_p
     theDLL.DTWAIN_SelectSourceByNameWithOpenA.restype = ct.c_void_p
     theDLL.DTWAIN_SelectSourceByNameWithOpenW.restype = ct.c_void_p
     theDLL.DTWAIN_SelectSourceWithOpen.restype = ct.c_void_p
     theDLL.DTWAIN_SetAcquireArea.restype = ct.c_long
     theDLL.DTWAIN_SetAcquireArea2.restype = ct.c_long
     theDLL.DTWAIN_SetAcquireArea2String.restype = ct.c_long
     theDLL.DTWAIN_SetAcquireArea2StringA.restype = ct.c_long
     theDLL.DTWAIN_SetAcquireArea2StringW.restype = ct.c_long
     theDLL.DTWAIN_SetAcquireImageNegative.restype = ct.c_long
     theDLL.DTWAIN_SetAcquireImageScale.restype = ct.c_long
     theDLL.DTWAIN_SetAcquireImageScaleString.restype = ct.c_long
     theDLL.DTWAIN_SetAcquireImageScaleStringA.restype = ct.c_long
     theDLL.DTWAIN_SetAcquireImageScaleStringW.restype = ct.c_long
     theDLL.DTWAIN_SetAcquireStripBuffer.restype = ct.c_long
     theDLL.DTWAIN_SetAcquireStripSize.restype = ct.c_long
     theDLL.DTWAIN_SetAlarmVolume.restype = ct.c_long
     theDLL.DTWAIN_SetAlarms.restype = ct.c_long
     theDLL.DTWAIN_SetAllCapsToDefault.restype = ct.c_long
     theDLL.DTWAIN_SetAppInfo.restype = ct.c_long
     theDLL.DTWAIN_SetAppInfoA.restype = ct.c_long
     theDLL.DTWAIN_SetAppInfoW.restype = ct.c_long
     theDLL.DTWAIN_SetAuthor.restype = ct.c_long
     theDLL.DTWAIN_SetAuthorA.restype = ct.c_long
     theDLL.DTWAIN_SetAuthorW.restype = ct.c_long
     theDLL.DTWAIN_SetAvailablePrinters.restype = ct.c_long
     theDLL.DTWAIN_SetAvailablePrintersArray.restype = ct.c_long
     theDLL.DTWAIN_SetBitDepth.restype = ct.c_long
     theDLL.DTWAIN_SetBlankPageDetection.restype = ct.c_long
     theDLL.DTWAIN_SetBlankPageDetectionEx.restype = ct.c_long
     theDLL.DTWAIN_SetBlankPageDetectionExString.restype = ct.c_long
     theDLL.DTWAIN_SetBlankPageDetectionExStringA.restype = ct.c_long
     theDLL.DTWAIN_SetBlankPageDetectionExStringW.restype = ct.c_long
     theDLL.DTWAIN_SetBlankPageDetectionString.restype = ct.c_long
     theDLL.DTWAIN_SetBlankPageDetectionStringA.restype = ct.c_long
     theDLL.DTWAIN_SetBlankPageDetectionStringW.restype = ct.c_long
     theDLL.DTWAIN_SetBrightness.restype = ct.c_long
     theDLL.DTWAIN_SetBrightnessString.restype = ct.c_long
     theDLL.DTWAIN_SetBrightnessStringA.restype = ct.c_long
     theDLL.DTWAIN_SetBrightnessStringW.restype = ct.c_long
     theDLL.DTWAIN_SetBufferedTileMode.restype = ct.c_long
     theDLL.DTWAIN_SetCallback.restype = theDLL.SETCALLBACK_TYPE
     theDLL.DTWAIN_SetCallback64.restype = theDLL.SETCALLBACK64_TYPE
     theDLL.DTWAIN_SetCamera.restype = ct.c_long
     theDLL.DTWAIN_SetCameraA.restype = ct.c_long
     theDLL.DTWAIN_SetCameraW.restype = ct.c_long
     theDLL.DTWAIN_SetCapValues.restype = ct.c_long
     theDLL.DTWAIN_SetCapValuesEx.restype = ct.c_long
     theDLL.DTWAIN_SetCapValuesEx2.restype = ct.c_long
     theDLL.DTWAIN_SetCaption.restype = ct.c_long
     theDLL.DTWAIN_SetCaptionA.restype = ct.c_long
     theDLL.DTWAIN_SetCaptionW.restype = ct.c_long
     theDLL.DTWAIN_SetCompressionType.restype = ct.c_long
     theDLL.DTWAIN_SetContrast.restype = ct.c_long
     theDLL.DTWAIN_SetContrastString.restype = ct.c_long
     theDLL.DTWAIN_SetContrastStringA.restype = ct.c_long
     theDLL.DTWAIN_SetContrastStringW.restype = ct.c_long
     theDLL.DTWAIN_SetCountry.restype = ct.c_long
     theDLL.DTWAIN_SetCurrentRetryCount.restype = ct.c_long
     theDLL.DTWAIN_SetCustomDSData.restype = ct.c_long
     theDLL.DTWAIN_SetDSMSearchOrder.restype = ct.c_long
     theDLL.DTWAIN_SetDSMSearchOrderEx.restype = ct.c_long
     theDLL.DTWAIN_SetDSMSearchOrderExA.restype = ct.c_long
     theDLL.DTWAIN_SetDSMSearchOrderExW.restype = ct.c_long
     theDLL.DTWAIN_SetDefaultSource.restype = ct.c_long
     theDLL.DTWAIN_SetDeviceNotifications.restype = ct.c_long
     theDLL.DTWAIN_SetDeviceTimeDate.restype = ct.c_long
     theDLL.DTWAIN_SetDeviceTimeDateA.restype = ct.c_long
     theDLL.DTWAIN_SetDeviceTimeDateW.restype = ct.c_long
     theDLL.DTWAIN_SetDoubleFeedDetectLength.restype = ct.c_long
     theDLL.DTWAIN_SetDoubleFeedDetectLengthString.restype = ct.c_long
     theDLL.DTWAIN_SetDoubleFeedDetectLengthStringA.restype = ct.c_long
     theDLL.DTWAIN_SetDoubleFeedDetectLengthStringW.restype = ct.c_long
     theDLL.DTWAIN_SetDoubleFeedDetectValues.restype = ct.c_long
     theDLL.DTWAIN_SetDoublePageCountOnDuplex.restype = ct.c_long
     theDLL.DTWAIN_SetEOJDetectValue.restype = ct.c_long
     theDLL.DTWAIN_SetErrorBufferThreshold.restype = ct.c_long
     theDLL.DTWAIN_SetErrorCallback.restype = ct.c_long
     theDLL.DTWAIN_SetErrorCallback64.restype = ct.c_long
     theDLL.DTWAIN_SetFeederAlignment.restype = ct.c_long
     theDLL.DTWAIN_SetFeederOrder.restype = ct.c_long
     theDLL.DTWAIN_SetFileAutoIncrement.restype = ct.c_long
     theDLL.DTWAIN_SetFileCompressionType.restype = ct.c_long
     theDLL.DTWAIN_SetFileSavePos.restype = ct.c_long
     theDLL.DTWAIN_SetFileSavePosA.restype = ct.c_long
     theDLL.DTWAIN_SetFileSavePosW.restype = ct.c_long
     theDLL.DTWAIN_SetFileXferFormat.restype = ct.c_long
     theDLL.DTWAIN_SetHalftone.restype = ct.c_long
     theDLL.DTWAIN_SetHalftoneA.restype = ct.c_long
     theDLL.DTWAIN_SetHalftoneW.restype = ct.c_long
     theDLL.DTWAIN_SetHighlight.restype = ct.c_long
     theDLL.DTWAIN_SetHighlightString.restype = ct.c_long
     theDLL.DTWAIN_SetHighlightStringA.restype = ct.c_long
     theDLL.DTWAIN_SetHighlightStringW.restype = ct.c_long
     theDLL.DTWAIN_SetJobControl.restype = ct.c_long
     theDLL.DTWAIN_SetJpegValues.restype = ct.c_long
     theDLL.DTWAIN_SetLanguage.restype = ct.c_long
     theDLL.DTWAIN_SetLastError.restype = ct.c_long
     theDLL.DTWAIN_SetLightPath.restype = ct.c_long
     theDLL.DTWAIN_SetLightPathEx.restype = ct.c_long
     theDLL.DTWAIN_SetLightSource.restype = ct.c_long
     theDLL.DTWAIN_SetLightSources.restype = ct.c_long
     theDLL.DTWAIN_SetLoggerCallback.restype = ct.c_long
     theDLL.DTWAIN_SetLoggerCallbackA.restype = ct.c_long
     theDLL.DTWAIN_SetLoggerCallbackW.restype = ct.c_long
     theDLL.DTWAIN_SetManualDuplexMode.restype = ct.c_long
     theDLL.DTWAIN_SetMaxAcquisitions.restype = ct.c_long
     theDLL.DTWAIN_SetMaxBuffers.restype = ct.c_long
     theDLL.DTWAIN_SetMaxRetryAttempts.restype = ct.c_long
     theDLL.DTWAIN_SetMultipageScanMode.restype = ct.c_long
     theDLL.DTWAIN_SetNoiseFilter.restype = ct.c_long
     theDLL.DTWAIN_SetOCRCapValues.restype = ct.c_long
     theDLL.DTWAIN_SetOrientation.restype = ct.c_long
     theDLL.DTWAIN_SetOverscan.restype = ct.c_long
     theDLL.DTWAIN_SetPDFAESEncryption.restype = ct.c_long
     theDLL.DTWAIN_SetPDFASCIICompression.restype = ct.c_long
     theDLL.DTWAIN_SetPDFAuthor.restype = ct.c_long
     theDLL.DTWAIN_SetPDFAuthorA.restype = ct.c_long
     theDLL.DTWAIN_SetPDFAuthorW.restype = ct.c_long
     theDLL.DTWAIN_SetPDFCompression.restype = ct.c_long
     theDLL.DTWAIN_SetPDFCreator.restype = ct.c_long
     theDLL.DTWAIN_SetPDFCreatorA.restype = ct.c_long
     theDLL.DTWAIN_SetPDFCreatorW.restype = ct.c_long
     theDLL.DTWAIN_SetPDFEncryption.restype = ct.c_long
     theDLL.DTWAIN_SetPDFEncryptionA.restype = ct.c_long
     theDLL.DTWAIN_SetPDFEncryptionW.restype = ct.c_long
     theDLL.DTWAIN_SetPDFJpegQuality.restype = ct.c_long
     theDLL.DTWAIN_SetPDFKeywords.restype = ct.c_long
     theDLL.DTWAIN_SetPDFKeywordsA.restype = ct.c_long
     theDLL.DTWAIN_SetPDFKeywordsW.restype = ct.c_long
     theDLL.DTWAIN_SetPDFOCRConversion.restype = ct.c_long
     theDLL.DTWAIN_SetPDFOCRMode.restype = ct.c_long
     theDLL.DTWAIN_SetPDFOrientation.restype = ct.c_long
     theDLL.DTWAIN_SetPDFPageScale.restype = ct.c_long
     theDLL.DTWAIN_SetPDFPageScaleString.restype = ct.c_long
     theDLL.DTWAIN_SetPDFPageScaleStringA.restype = ct.c_long
     theDLL.DTWAIN_SetPDFPageScaleStringW.restype = ct.c_long
     theDLL.DTWAIN_SetPDFPageSize.restype = ct.c_long
     theDLL.DTWAIN_SetPDFPageSizeString.restype = ct.c_long
     theDLL.DTWAIN_SetPDFPageSizeStringA.restype = ct.c_long
     theDLL.DTWAIN_SetPDFPageSizeStringW.restype = ct.c_long
     theDLL.DTWAIN_SetPDFPolarity.restype = ct.c_long
     theDLL.DTWAIN_SetPDFProducer.restype = ct.c_long
     theDLL.DTWAIN_SetPDFProducerA.restype = ct.c_long
     theDLL.DTWAIN_SetPDFProducerW.restype = ct.c_long
     theDLL.DTWAIN_SetPDFSubject.restype = ct.c_long
     theDLL.DTWAIN_SetPDFSubjectA.restype = ct.c_long
     theDLL.DTWAIN_SetPDFSubjectW.restype = ct.c_long
     theDLL.DTWAIN_SetPDFTextElementFloat.restype = ct.c_long
     theDLL.DTWAIN_SetPDFTextElementLong.restype = ct.c_long
     theDLL.DTWAIN_SetPDFTextElementString.restype = ct.c_long
     theDLL.DTWAIN_SetPDFTextElementStringA.restype = ct.c_long
     theDLL.DTWAIN_SetPDFTextElementStringW.restype = ct.c_long
     theDLL.DTWAIN_SetPDFTitle.restype = ct.c_long
     theDLL.DTWAIN_SetPDFTitleA.restype = ct.c_long
     theDLL.DTWAIN_SetPDFTitleW.restype = ct.c_long
     theDLL.DTWAIN_SetPaperSize.restype = ct.c_long
     theDLL.DTWAIN_SetPatchMaxPriorities.restype = ct.c_long
     theDLL.DTWAIN_SetPatchMaxRetries.restype = ct.c_long
     theDLL.DTWAIN_SetPatchPriorities.restype = ct.c_long
     theDLL.DTWAIN_SetPatchSearchMode.restype = ct.c_long
     theDLL.DTWAIN_SetPatchTimeOut.restype = ct.c_long
     theDLL.DTWAIN_SetPixelFlavor.restype = ct.c_long
     theDLL.DTWAIN_SetPixelType.restype = ct.c_long
     theDLL.DTWAIN_SetPostScriptTitle.restype = ct.c_long
     theDLL.DTWAIN_SetPostScriptTitleA.restype = ct.c_long
     theDLL.DTWAIN_SetPostScriptTitleW.restype = ct.c_long
     theDLL.DTWAIN_SetPostScriptType.restype = ct.c_long
     theDLL.DTWAIN_SetPrinter.restype = ct.c_long
     theDLL.DTWAIN_SetPrinterEx.restype = ct.c_long
     theDLL.DTWAIN_SetPrinterStartNumber.restype = ct.c_long
     theDLL.DTWAIN_SetPrinterStringMode.restype = ct.c_long
     theDLL.DTWAIN_SetPrinterStrings.restype = ct.c_long
     theDLL.DTWAIN_SetPrinterSuffixString.restype = ct.c_long
     theDLL.DTWAIN_SetPrinterSuffixStringA.restype = ct.c_long
     theDLL.DTWAIN_SetPrinterSuffixStringW.restype = ct.c_long
     theDLL.DTWAIN_SetQueryCapSupport.restype = ct.c_long
     theDLL.DTWAIN_SetResolution.restype = ct.c_long
     theDLL.DTWAIN_SetResolutionString.restype = ct.c_long
     theDLL.DTWAIN_SetResolutionStringA.restype = ct.c_long
     theDLL.DTWAIN_SetResolutionStringW.restype = ct.c_long
     theDLL.DTWAIN_SetResourcePath.restype = ct.c_long
     theDLL.DTWAIN_SetResourcePathA.restype = ct.c_long
     theDLL.DTWAIN_SetResourcePathW.restype = ct.c_long
     theDLL.DTWAIN_SetRotation.restype = ct.c_long
     theDLL.DTWAIN_SetRotationString.restype = ct.c_long
     theDLL.DTWAIN_SetRotationStringA.restype = ct.c_long
     theDLL.DTWAIN_SetRotationStringW.restype = ct.c_long
     theDLL.DTWAIN_SetSaveFileName.restype = ct.c_long
